--- a/styles/editor.css
+++ b/styles/editor.css
@@ -1,3 +1,9 @@
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+.modal-title {
+  text-align: center;
+}
+
 .Resizer {
   background: #000;
   opacity: 0.2;
